Fix PR review comments: exception handling, thread-safety, and CI fixes
- Fix java11/java17/java21 toml-schema error messages wrongly referencing
  platform.java25
- Fix CI: apply repo_name mapping (-tool -> -tools) when updating lang
  version, don't mask java-25-migration checkout failures
- Use balaProject.platform() instead of hardcoded JAVA_25 when pushing a
  bala to a repository
- Fix swallowed exceptions in CommandUtil.getPackageVersions and
  ToolUseCommand.copyDirectory so failures are reported instead of
  escaping uncaught
- Make BallerinaWorkspaceManager's crashed-state flags and the debugger
  test listeners' completion flags volatile for cross-thread visibility
- Fix buildDir interpolation in jballerina-integration-test's createBre
  task (was using single quotes, so $buildDir never expanded)
- Move tool_gayal local-tool test fixtures from java17 to java25 to
  match their package.json platform metadata; update the matching
  ToolCommandTest assertion
- Pass -J--sun-misc-unsafe-memory-access=allow to the native-image
  builder JVM instead of the invalid -Dsun.misc.unsafe.memory.access
  system property